name:                ptm
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    CoreLike.Parser
    CoreLike.Syntax
    CoreLike.ToHSE

  build-depends:
    base >=4.8 && <4.9,
    containers,
    deepseq,
    haskell-src-exts,
    mtl,
    pretty

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ptm
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.8 && <4.9,
    containers,
    haskell-src-exts,
    ptm

  hs-source-dirs:      execs
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded

  build-depends:
    base >=4.7 && <5,
    containers,
    directory,
    filepath,
    haskell-src-exts,
    hspec,
    hspec-contrib,
    HUnit,
    ptm
