name:                ptm
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    CoreLike.Eval
    CoreLike.Parser
    CoreLike.Simplify
    CoreLike.Step
    CoreLike.Syntax
    CoreLike.ToHSE

  build-depends:
    base >=4.8 && <4.9,
    containers,
    deepseq,
    haskell-src-exts,
    mtl,
    pretty,
    wl-pprint >= 1.2 && < 1.3

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ptm
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.8 && <4.9,
    containers,
    directory,
    haskeline,
    haskell-src-exts,
    mtl,
    ptm,
    safe,

  hs-source-dirs:      execs
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ptm-eval
  main-is:             MainEval.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.8 && <4.9,
    containers,
    directory,
    haskeline,
    haskell-src-exts,
    mtl,
    ptm,
    safe,
    transformers,
    wl-pprint >= 1.2 && < 1.3

  hs-source-dirs:      execs
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded

  build-depends:
    base >=4.7 && <5,
    containers,
    deepseq,
    directory,
    filepath,
    haskell-src-exts,
    hspec,
    hspec-contrib,
    HUnit,
    ptm
