name:                ptm
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    -- CoreLike.Debug
    CoreLike.Eval
    CoreLike.Parser
    CoreLike.Simplify
    -- CoreLike.Step
    CoreLike.Syntax
    -- CoreLike.TagBag
    CoreLike.ToHSE
    CoreLike.Utils

    CoreLike.MSG

    Deforestation.Deforest
    Deforestation.Parser
    Deforestation.Syntax
    Deforestation.ToHSE

    FlowChart
    FlowChart.Division
    FlowChart.Lexer
    FlowChart.Mix
    FlowChart.Parser
    FlowChart.Printer
    FlowChart.Syntax

    -- Scheme0.Syntax

  build-depends:
    base                >=4.8 && <4.9,
    binary,
    containers,
    deepseq,
    haskell-src-exts,
    mtl,
    parsec              >=3.1.9 && <3.2,
    pretty,
    safe,
    wl-pprint           >= 1.2 && < 1.3

  default-extensions:
    -- NOTE: DeriveAnyClass and GeneralizedNewtypeDeriving doesn't work well
    -- together, so we need to enable those in files. (see trac #10598)
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    OverloadedStrings
    TupleSections
    ViewPatterns

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

-- executable ptm
--   main-is:             Main.hs
--   -- other-modules:
--   -- other-extensions:
--   build-depends:
--     base >=4.8 && <4.9,
--     containers,
--     directory,
--     haskeline,
--     haskell-src-exts,
--     mtl,
--     ptm,
--     safe,
--     transformers
--
--   hs-source-dirs:      execs
--   default-language:    Haskell2010
--   ghc-options:         -Wall

-- executable ptm-eval
--   main-is:             MainEval.hs
--   -- other-modules:
--   -- other-extensions:
--   build-depends:
--     base >=4.8 && <4.9,
--     containers,
--     directory,
--     haskeline,
--     haskell-src-exts,
--     mtl,
--     ptm,
--     safe,
--     transformers
--
--   hs-source-dirs:      execs
--   default-language:    Haskell2010
--   ghc-options:         -Wall

executable deforest
  main-is:             Deforest.hs
  build-depends:
    base >=4.8 && <4.9

  if impl(ghcjs)
    build-depends:
      containers,
      directory,
      haskeline,
      haskell-src-exts,
      mtl,
      ptm,
      safe,
      transformers,

      ghcjs-base,
      ghcjs-dom

  hs-source-dirs:      execs
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded

  build-depends:
    ptm,

    base >=4.7 && <5,
    containers,
    deepseq,
    directory,
    filepath,
    haskell-src-exts,
    hspec,
    hspec-contrib,
    HUnit

  default-extensions:
    MultiWayIf
    TupleSections
